--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <div class="skill-row">
         <img class="After-Effects" src="images/After effects.png" alt="">
         <h3>Videography</h3>
-        <p>Multi-talented Video Editor and Photographer with more than 3 years’ consistent contributions in developing<br> and producing multi-media productions.Well-versed in all aspects of media and Web content production<br>from pre- to post-production, including camera and video operation,photo editingand storytelling.<br>Skilled in full-service multi-media production providing field production, post production, video editing,<br>digital imaging,compression, directing and talent.</p>
+        <p class="Video">Multi-talented Video Editor and Photographer with more than 3 years’ consistent contributions in developing<br> and producing multi-media productions.Well-versed in all aspects of media and Web content production<br>from pre- to post-production, including camera and video operation,photo editingand storytelling.<br>Skilled in full-service multi-media production providing field production, post production, video editing,<br>digital imaging,compression, directing and talent.</p>
       </div>
     </div>
     <div class="skill-row">
       <img class="Blender" src="images/Blender.png" alt=""
       <img class="" src="" alt="">
       <h3>3D Modeling</h3>
-      <p>Im a begginer 3D artist, I use Blender as my 3d software beacause its so easy to learn and understand logiques of 3d modeling <br>
+      <p class="DM">Im a begginer 3D artist, I use Blender as my 3d software beacause its so easy to learn and understand logiques of 3d modeling <br>
         and animating, I created many projects in blender to make some art and school work , i managed to learn so far how to make <br>
         scenes and model hard surface objects , texturing and rendering , and now im learning Animations and compositing , <br>
         wish me luck ^^"</p>
